Add help, eval, info commands and changing status

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"version": "1.0.0",
 	"main": "bot.js",
 	"scripts": {
-		"start": "node bot.js"
+		"start": "node bot.js",
+		"dev": "nodemon bot.js"
 	},
 	"author": "ejer",
 	"license": "ISC",
